#1001 Initialize property registry during application initialization